# mutestplusplus

./: .clang-format  .git-blame-ignore-revs  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: basic.yml
CppUTest/: CMakeLists.txt  CppUTestGeneratedConfig.h.cmake
CppUTest/include/CppUTest/: CommandLineArguments.h  CommandLineArguments.hpp  CommandLineTestRunner.h  CommandLineTestRunner.hpp  CppUTestConfig.h  CppUTestConfig.hpp  JUnitTestOutput.h  JUnitTestOutput.hpp  PlatformSpecificFunctions.h  PlatformSpecificFunctions.hpp  PlatformSpecificFunctions_c.h  SimpleMutex.hpp  SimpleString.h  SimpleString.hpp  SimpleStringInternalCache.h  SimpleStringInternalCache.hpp  StandardCLibrary.h  TeamCityTestOutput.h  TeamCityTestOutput.hpp  TestFailure.h  TestFailure.hpp  TestFilter.hpp  TestHarness.h  TestHarness.hpp  TestHarness_c.h  TestMemoryAllocator.h  TestMemoryAllocator.hpp  TestOutput.h  TestOutput.hpp  TestPlugin.h  TestPlugin.hpp  TestRegistry.h  TestRegistry.hpp  TestResult.h  TestResult.hpp  TestTestingFixture.h  TestTestingFixture.hpp  Utest.h  Utest.hpp  UtestMacros.h  (+1 more)
CppUTest/platform/Gcc/: CMakeLists.txt
CppUTest/platform/Gcc/src/: PlatformSpecificFunctions.cpp
CppUTest/platform/Iar/: CMakeLists.txt
CppUTest/platform/Iar/src/: PlatformSpecificFunctions.cpp
CppUTest/platform/Keil/src/: PlatformSpecificFunctions.cpp
CppUTest/platform/Symbian/src/: PlatformSpecificFunctions.cpp
CppUTest/platform/VisualCpp/: CMakeLists.txt
CppUTest/platform/VisualCpp/src/: PlatformSpecificFunctions.cpp
CppUTest/platform/armcc/src/: PlatformSpecificFunctions.cpp
CppUTest/src/: CommandLineArguments.cpp  CommandLineTestRunner.cpp  JUnitTestOutput.cpp  SimpleMutex.cpp  SimpleString.cpp  SimpleStringInternalCache.cpp  TeamCityTestOutput.cpp  TestFailure.cpp  TestFilter.cpp  TestHarness.cpp  TestHarness_c.cpp  TestMemoryAllocator.cpp  TestOutput.cpp  TestPlugin.cpp  TestRegistry.cpp  TestResult.cpp  TestTestingFixture.cpp  Utest.cpp
CppUTest/test/: CMakeLists.txt
CppUTest/test/include/: AllocationInCppFile.h
CppUTest/test/src/: AllTests.cpp  CheatSheetTest.cpp  CommandLineArgumentsTest.cpp  CommandLineTestRunnerTest.cpp  CompatabilityTests.cpp  JUnitOutputTest.cpp  PluginTest.cpp  PreprocessorTest.cpp  SetPluginTest.cpp  SimpleMutexTest.cpp  SimpleStringCacheTest.cpp  SimpleStringTest.cpp  TeamCityOutputTest.cpp  TestFailureNaNTest.cpp  TestFailureTest.cpp  TestFilterTest.cpp  TestHarnessTest.c  TestHarnessTest.cpp  TestHarness_cTest.cpp  TestHarness_cTestCFile.c  TestInstallerTest.cpp  TestMemoryAllocatorTest.cpp  TestOutputTest.cpp  TestRegistryTest.cpp  TestResultTest.cpp  TestUTestMacro.cpp  TestUTestStringMacro.cpp  UtestPlatformTest.cpp  UtestTest.cpp
CppUTestExt/: CMakeLists.txt
CppUTestExt/include/CppUTestExt/: IEEE754ExceptionsPlugin.h  IEEE754ExceptionsPlugin.hpp  MockActualCall.h  MockActualCall.hpp  MockCheckedActualCall.h  MockCheckedActualCall.hpp  MockCheckedExpectedCall.h  MockCheckedExpectedCall.hpp  MockExpectedCall.h  MockExpectedCall.hpp  MockExpectedCallsList.h  MockExpectedCallsList.hpp  MockFailure.h  MockFailure.hpp  MockNamedValue.h  MockNamedValue.hpp  MockSupport.h  MockSupport.hpp  MockSupportPlugin.h  MockSupportPlugin.hpp  MockSupport_c.h  OrderedTest.h  OrderedTest.hpp
CppUTestExt/src/: IEEE754ExceptionsPlugin.cpp  MockActualCall.cpp  MockExpectedCall.cpp  MockExpectedCallsList.cpp  MockFailure.cpp  MockNamedValue.cpp  MockSupport.cpp  MockSupportPlugin.cpp  MockSupport_c.cpp  OrderedTest.cpp
CppUTestExt/test/: CMakeLists.txt
CppUTestExt/test/include/: MockFailureReporterForTest.h  MockFailureReporterForTest.hpp
CppUTestExt/test/src/: AllTests.cpp  ExpectedFunctionsListTest.cpp  IEEE754PluginTest.c  IEEE754PluginTest.cpp  MockActualCallTest.cpp  MockCallTest.cpp  MockCheatSheetTest.cpp  MockComparatorCopierTest.cpp  MockExpectedCallTest.cpp  MockFailureReporterForTest.cpp  MockFailureTest.cpp  MockFakeLongLong.cpp  MockHierarchyTest.cpp  MockNamedValueTest.cpp  MockParameterTest.cpp  MockPluginTest.cpp  MockReturnValueTest.cpp  MockStrictOrderTest.cpp  MockSupportTest.c  MockSupportTest.cpp  MockSupport_cTest.cpp  MockSupport_cTestCFile.c  OrderedTestTest.c  OrderedTestTest.cpp
cmake/: CppUTestConfig.cmake.install.in  install.cmake  warnings.cmake
examples/AllTests/: CMakeLists.txt
examples/AllTests/include/: AllTests.h  MockPrinter.h  MockPrinter.hpp
examples/AllTests/src/: AllTests.cpp  CircularBufferTest.cpp  EventDispatcherTest.cpp  FEDemoTest.cpp  HelloTest.cpp  MockDocumentationTest.cpp  PrinterTest.cpp
examples/ApplicationLib/: CMakeLists.txt
examples/ApplicationLib/src/: CircularBuffer.cpp  EventDispatcher.cpp  Printer.cpp  hello.c
