add_executable(CppUTestExtTests
    src/AllTests.cpp
    src/ExpectedFunctionsListTest.cpp
    src/ExpectedFunctionsListTest.cpp
    src/IEEE754PluginTest.cpp
    src/IEEE754PluginTest.c
    src/MockActualCallTest.cpp
    src/MockCallTest.cpp
    src/MockCheatSheetTest.cpp
    src/MockComparatorCopierTest.cpp
    src/MockComparatorCopierTest.cpp
    src/MockComparatorCopierTest.cpp
    src/MockExpectedCallTest.cpp
    src/MockFailureReporterForTest.cpp
    src/MockFailureReporterForTest.cpp
    src/MockFailureReporterForTest.cpp
    src/MockFailureReporterForTest.cpp
    src/MockFailureReporterForTest.cpp
    src/MockFailureReporterForTest.cpp
    src/MockFailureReporterForTest.cpp
    src/MockFailureReporterForTest.cpp
    src/MockFailureReporterForTest.cpp
    src/MockFailureTest.cpp
    src/MockHierarchyTest.cpp
    src/MockHierarchyTest.cpp
    src/MockHierarchyTest.cpp
    src/MockNamedValueTest.cpp
    src/MockParameterTest.cpp
    src/MockPluginTest.cpp
    src/MockPluginTest.cpp
    src/MockReturnValueTest.cpp
    src/MockReturnValueTest.cpp
    src/MockStrictOrderTest.cpp
    src/MockSupportTest.cpp
    src/MockSupport_cTest.cpp
    src/MockSupportTest.c
    src/OrderedTestTest.cpp
    src/OrderedTestTest.c
)

target_include_directories(CppUTestExtTests
    PRIVATE
        include
)

target_link_libraries(CppUTestExtTests
    PRIVATE
        CppUTest
        CppUTestExt
)

include(CppUTest)
cpputest_discover_tests(CppUTestExtTests
    DETAILED FALSE
)
